java 8 support, huge fps bump, cuz java 17 is utter trash